Fix align of notifications dropdown's header

--- a/js/src/main/TopBar/NotificationsDropdown/NotificationsDropdownItem.css
+++ b/js/src/main/TopBar/NotificationsDropdown/NotificationsDropdownItem.css
@@ -20,7 +20,7 @@
 }
 
 .notification-item + .dropdown-divider {
-    margin: 0
+    margin: 0;
 }
 
 .notification-item:hover {
@@ -29,7 +29,7 @@
 }
 
 .notification-item:hover > svg {
-    opacity: .7;
+    opacity: 0.7;
 }
 
 .notifications-info {
@@ -42,6 +42,7 @@
 .notifications-info p {
     overflow: hidden;
     text-overflow: ellipsis;
+    margin-bottom: 0.3em;
 }
 
 .dismiss svg {
